--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,11 @@ edition = "2018"
 [dependencies]
 oci = { path = "oci" }
 libcontainer = { path = "libcontainer" }
+protocols = { path = "protocols" }
 lazy_static = "1.3.0"
 error-chain = "0.12.1"
+log = "0.4.6"
+simple-logging = "2.0.2"
+grpcio = "0.5.0-alpha.1"
+protobuf = "2.6.1"
+futures = "0.1.27"
