--- a/libcontainer/Cargo.toml
+++ b/libcontainer/Cargo.toml
@@ -5,13 +5,17 @@ authors = ["Yang Bo <bo@hyper.sh>"]
 edition = "2018"
 
 [dependencies]
-error_chain = "0.12.1"
+error-chain = "0.12.1"
 serde = "1.0.91"
-serde_json = "1.0.91"
+serde_json = "1.0.39"
 serde_derive = "1.0.91"
 oci = { path = "../oci" }
 caps = "0.3.0"
-nix = "0.14.0"
+nix = "0.14.1"
+scopeguard = "1.0.0"
+prctl = "1.0.0"
+lazy_static = "1.3.0"
+libc = "0.2.58"
 
 [build-dependencies]
 cc = "1.0.37"
