--- a/libcontainer/Cargo.toml
+++ b/libcontainer/Cargo.toml
@@ -9,13 +9,16 @@ error-chain = "0.12.1"
 serde = "1.0.91"
 serde_json = "1.0.39"
 serde_derive = "1.0.91"
-oci = { path = "../oci" }
+# oci = { path = "../oci" }
+protocols = { path ="../protocols" }
 caps = "0.3.0"
 nix = "0.14.1"
 scopeguard = "1.0.0"
 prctl = "1.0.0"
 lazy_static = "1.3.0"
 libc = "0.2.58"
+protobuf = "2.6.1"
+log = "0.4.6"
 
 [build-dependencies]
 cc = "1.0.37"
