--- a/libcontainer/Cargo.toml
+++ b/libcontainer/Cargo.toml
@@ -19,6 +19,7 @@ lazy_static = "1.3.0"
 libc = "0.2.58"
 protobuf = "2.6.1"
 log = "0.4.6"
+scan_fmt = "0.2.3"
 
 [build-dependencies]
 cc = "1.0.37"
