--- a/libcontainer/Cargo.toml
+++ b/libcontainer/Cargo.toml
@@ -9,7 +9,7 @@ error-chain = "0.12.1"
 serde = "1.0.91"
 serde_json = "1.0.39"
 serde_derive = "1.0.91"
-# oci = { path = "../oci" }
+oci = { path = "../oci" }
 protocols = { path ="../protocols" }
 caps = "0.3.0"
 nix = "0.14.1"
@@ -19,7 +19,8 @@ lazy_static = "1.3.0"
 libc = "0.2.58"
 protobuf = "2.6.1"
 log = "0.4.6"
-scan_fmt = "0.2.3"
+scan_fmt = "0.2"
+regex = "1.1"
 
 [build-dependencies]
 cc = "1.0.37"
