--- a/libcontainer/Cargo.toml
+++ b/libcontainer/Cargo.toml
@@ -21,6 +21,7 @@ protobuf = "2.6.1"
 log = "0.4.6"
 scan_fmt = "0.2"
 regex = "1.1"
+path-absolutize = { git = "git://github.com/magiclen/path-absolutize.git", tag= "v1.1.3" }
 
 [build-dependencies]
 cc = "1.0.37"
