Save spec to bundle path.
save <bundle path>/config.json. It will be used by hooks

Signed-off-by: Bo Yang <yb203166@antfin.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Yang Bo <bo@hyper.sh>"]
 edition = "2018"
 
 [dependencies]
-#oci = { path = "oci" }
+oci = { path = "oci" }
 libcontainer = { path = "libcontainer" }
 protocols = { path = "protocols" }
 lazy_static = "1.3.0"
