rename container library to rustjail
Signed-off-by: Bo Yang <yb203166@antfin.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 oci = { path = "oci" }
-libcontainer = { path = "libcontainer" }
+rustjail = { path = "rustjail" }
 protocols = { path = "protocols" }
 lazy_static = "1.3.0"
 error-chain = "0.12.1"
