--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,6 @@ rustjail = { path = "rustjail" }
 protocols = { path = "protocols" }
 lazy_static = "1.3.0"
 error-chain = "0.12.1"
-log = "0.4.6"
-simple-logging = "2.0.2"
 grpcio = { path = "grpc-rs" }
 protobuf = "2.6.1"
 futures = "0.1.27"
@@ -22,3 +20,13 @@ serde_json = "1.0.39"
 signal-hook = "0.1.9"
 scan_fmt = "0.2.3"
 regex = "1"
+# slog:
+# - Dynamic keys required to allow HashMap keys to be slog::Serialized.
+# - The 'max_*' features allow changing the log level at runtime
+#   (by stopping the compiler from removing log calls).
+slog = { version = "2.5.2", features = ["dynamic-keys", "max_level_trace", "release_max_level_info"] }
+slog-json = "2.3.0"
+slog-async = "2.3.0"
+slog-scope = "4.1.2"
+# for testing
+tempfile = "3.1.0"
