--- a/rustjail/Cargo.toml
+++ b/rustjail/Cargo.toml
@@ -18,8 +18,8 @@ prctl = "1.0.0"
 lazy_static = "1.3.0"
 libc = "0.2.58"
 protobuf = "2.6.1"
-log = "0.4.6"
+slog = "2.5.2"
+slog-scope = "4.1.2"
 scan_fmt = "0.2"
 regex = "1.1"
 path-absolutize = { git = "git://github.com/magiclen/path-absolutize.git", tag= "v1.1.3" }
-
