ci: Fix repo dir and scripts name
Fixup repo dir to make ci work. Fix scripts name

Signed-off-by: Bo Yang <yb203166@antfin.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
     - ".ci/setup.sh"
     - ".ci/install_go.sh"
     - ".ci/install_rust.sh"
-    - ".ci/static_checks.sh"
+    - ".ci/static-checks.sh"
 
 # need to install rust from scratch?
 # still need go to download github.com/kata-containers/tests
