--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,4 @@ install:
     - cd ${TRAVIS_BUILD_DIR} && make
 
 script:
-    - cd ${TRAVIS_BUILD_DIR} && make test
+    - cd ${TRAVIS_BUILD_DIR} && make check
